# DroidExplorer

./: .gitignore  README.md  THIRD_PARTY_NOTICES.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: ci.yml
cli/: build.gradle.kts
cli/src/main/kotlin/dev/droidfiles/cli/: BenchmarkMain.kt  Main.kt
client-core/: build.gradle.kts
client-core/src/main/kotlin/dev/droidfiles/client/: ConflictResolver.kt  ControlConnection.kt  DefaultTransferManager.kt  Models.kt  OpenFileCache.kt  ProtocolRemoteFileSystem.kt  RawTransferClient.kt  RemoteSearchService.kt  Utilities.kt
client-core/src/test/kotlin/dev/droidfiles/client/: OpenFileCacheTest.kt  (+7 more)
desktop-app/: build.gradle.kts
docs/: PROGRESS.md  architecture.md  protocol.md  ui-rendering.md  windows-shell-acceptance.md
docs/adr/: 0001-module-architecture.md  0002-wire-protocol.md  0003-windows-virtual-file-drag.md  0004-cache-and-open-file-semantics.md
gradle/: libs.versions.toml
integration-tests/: android-e2e.ps1  benchmark-last.json  benchmark-transfer.ps1
platform-windows/: build.gradle.kts
privilege/: build.gradle.kts
protocol/: build.gradle.kts
protocol/src/main/proto/: droidfiles.proto
server-android/: build.gradle.kts
server-android/src/main/: AndroidManifest.xml
testkit/: build.gradle.kts
transport-adb/: build.gradle.kts
windows-shell-bridge/: build.gradle.kts
windows-shell-bridge/src/main/cpp/: CMakeLists.txt  bridge.cpp  descriptor.cpp  descriptor.h  descriptor_tests.cpp  network_stream.cpp  network_stream.h  virtual_data_object.cpp  virtual_data_object.h
(+39 files in other folders)
