cmake_minimum_required(VERSION 3.25)
project(droidfiles_shell_bridge LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
add_compile_options(/utf-8)
find_package(JNI REQUIRED)
add_library(droidfiles_shell_bridge SHARED descriptor.cpp virtual_data_object.cpp network_stream.cpp bridge.cpp)
target_include_directories(droidfiles_shell_bridge PRIVATE ${JNI_INCLUDE_DIRS})
target_compile_definitions(droidfiles_shell_bridge PRIVATE UNICODE _UNICODE NOMINMAX WIN32_LEAN_AND_MEAN)
target_link_libraries(droidfiles_shell_bridge PRIVATE ole32 shell32)
target_link_libraries(droidfiles_shell_bridge PRIVATE ws2_32)
add_executable(descriptor_tests descriptor.cpp virtual_data_object.cpp descriptor_tests.cpp)
target_compile_definitions(descriptor_tests PRIVATE UNICODE _UNICODE NOMINMAX WIN32_LEAN_AND_MEAN)
target_link_libraries(descriptor_tests PRIVATE ole32 shell32 shlwapi)
enable_testing()
add_test(NAME descriptor_tests COMMAND descriptor_tests)
